--- a/06_RT.Rmd
+++ b/06_RT.Rmd
@@ -1,6 +1,6 @@
 # Using RT
 
-##Navigating RT
+## Navigating RT
 
 The [RT ticketing system](https://support.nceas.ucsb.edu/rt/) is how we
 communicate with folks interacting with the Arctic Data Center.  
@@ -57,53 +57,138 @@ This is the queue interface from number 6 of the Front page
  + Resolve - ticket completed  
 8. History - message history and option to reply (to submitter and beyond) or comment (internal message)
 
-## Email templates
+## Initial review
+
+### Checklist
+
+- Title
+    - Provides the what, where, and when of the data
+    - Does not use acronyms
+- Abstract
+    - Describes the DATA
+- Data
+    - At least one data file
+    - No xls/xlsx files (or other proprietary files)
+    - File contents and relationships among files are clear
+    - All attributes are clearly defined
+    - Column names do not use spaces or special characters
+    - NA's are defined.
+- Contacts
+    - At least one contact with email and ORCiD
+- Temporal/geographic coverage
+    - Includes coverage that makes sense.
+- Funding
+    - At least one funding number
+    - If there are multiple submissions with the same funding number/creators, check about nesting
+- Methods
+  - Enough detail is provided in metadata
+
+### Starting email text
+
+> Hello _____,
+> Thank you for your recent submission to the NSF Arctic Data Center! We will review your dataset and get back to you with any suggestions.
+> 
+> From my preliminary examination of your submission I have noticed a few items that I would like to bring to your attention. We are here to help you publish your submission, but your continued assistance is needed to do so. See comments below:
+> 
+> [COMMENTS HERE]
+> 
+> Best,
+> 
+> [YOUR NAME]
+
+### Deadlines
+If the PI is checking about dates/timing:
+
+> We process submissions in the order in which they are received, and yours still has a few ahead of it in our queue. Are you facing any deadlines? If so, we may be able to expedite publication of your submission.
+
+### Pre-assigned DOI
+If the PI needs a DOI right away:
+
+> We can provide you with a pre-assigned DOI that you can reference in your paper. However, please note that it will not become active until after we have finished processing your submission and the package is published. 
+
+### Title
+#### Provides the *what, where, and when* of the data
+
+> We would like to add some more context to your data package title. A descriptive title that provides context about the what, where, and when of a data package is often far more useful in search results. Something like: ‘OUR SUGGESTION HERE, WHERE, WHEN’ might be an option.
+
+#### Does not use acronyms
+
+> We noticed that your title contains several acronyms or abbreviations. In order to increase discoverability of your title, please spell out all acronyms and abbreviations.
+
+### Abstract
+#### Describes DATA in package (ideally > 100 words)
+
+> Your abstract, while informative, appears to be missing some information. We suggest that the abstract be sufficiently descriptive for a general scientific audience. It should provide an overview of the scientific context/ project/ hypotheses, how this data package fits into the larger project, a synopsis of the experimental or sampling design, and a summary of the data contents. If you prefer and it is appropriate, we could add language from the abstract in the NSF Award found here: [NSF AWARD URL].
+
+### Data
+
+#### At least one data file
+> We noticed that no data files were submitted. With the exception of sensitive social science data, NSF requires the submission of all data products prior to publication. Do you intend to submit data files?
+
+#### No xls/xlsx files (or other proprietary files)
+
+> We noticed that the data files submitted are in xlsx format. Please convert your files to a plain text/csv (or other open source format) in order to facilitate an accurate transfer of information to users and to ensure preservation of the data in perpetuity.
+
+> We noticed you submitted your data as a .mat file. While the Arctic Data Center supports the upload of any data file format, sharing data can be greatly enhanced if you use ubiquitous, easy-to-read formats. We recommend conversion of your data to txt or csv (or other open) formats for better archival.
+
+#### File contents and relationships among files are clear
+
+> Could you provide a short description of the files submitted? Information about how each file was generated (what software, source files, etc.) allows other scientists to reproduce your work.
+
+#### All attributes are clearly defined
+
+Check for descriptions of abbreviations and units:
+
+> Could you describe ____? 
+
+> Please define “X”. 
+
+> Please define “XYZ”, including the unit of measure. 
+
+> What are the units of measurement for the columns labeled “ABC” and “XYZ”?
+
+#### Column names do not use spaces or special characters
+
+> Data files should include column headers without special characters or spaces (i.e., Exp_no, NO3_M, Organic_M, as per “Some Simple Guidelines for Effective Data Management” - http://onlinelibrary.wiley.com/doi/10.1890/0012-9623-90.2.205/full).
+
+#### NA's are defined.
+
+> What do the NA's in your measurements represent? (instrument failure, site not found, etc.)
+
+> We noticed that the data files contain blank cells. What do these represent? 
+
+### Funding
+
+- At least one funding number
+- If there are multiple submissions with the same funding number/creators, check about nesting
+
+> Thank you for your submission to the Arctic Data Center! Based on the NSF awards, your most recent submission and the [PACKAGE NAME] package appear to be related. Would you like your submission(s) grouped with the other data packages funded by the same award? If so, we are happy to do all this grouping for you.
+
+> Thank you for your submission to the Arctic Data Center! Based on the NSF awards, your most recent submission and the [PACKAGE NAME] parent package seem like disparate projects, is that correct?
+
+> Nesting data packages under a common “parent” is beneficial so that all packages funded by the same award can be found in one place. This way additional packages can be added to the group without altering existing ones. Once we process all the “child” data pacakges you upload, we can group them under the same “parent”. The parent does not need to contain any data files itself, but will be populated with metadata only.
+
+### Methods
+#### Enough detail is provided in metadata
+
+Submissions should:
+
+- provide instrument names
+- specify how sampling locations were chosen
+- provide citations for sampling methods that are not explained in detail
+
+> Your methods, while informative, appear to be missing some information. Enough detail should be included so that a reasonable scientist can interpret the study and data for reuse without consulting you nor any other resources. This should hold true today, or even decades or a century from now. Users need to understand how the data were collected, how to interpret the values, and potentially how to use the data in the case of specialized files. We would be happy to add more content for you. Please provide us with a more robust methods section directly in this email or point us to a document from which we can extract more methods.
+
+> NSF requires that comprehensive methods information be included directly in the metadata record. Pointers or URLs to other sites are unstable and insufficient.
+
+## Additional email templates
   
-### Initial response
-
-*Quick response*  
-Hello _____,  
-Thank you for your recent submission to the NSF Arctic Data Center. We will review your dataset and get back to you with any suggestions.
-
-From my preliminary examination of your submission I have noticed a few items that I would like to bring to your attention. We are happy to make any edits for you.
- See comments below:  
-
-
-### Title needs work  
-
-We would like to add some more context to your data set title. A descriptive title that provides context about the where, what, and when of a dataset is often far more useful in search results. Something like: 'OUR SUGGESTION HERE, WHERE, WHEN' might be an option.
-
-
-### Abstract comments
-
-*What's supposed to be in an abstract*  
-Your abstract, while informative, appears to be missing some information. We suggest that the abstract be sufficiently descriptive for a general scientific audience. It should provide an overview of the scientific context/ project/ hypotheses, how this data set fits into the larger project, a synopsis of the experimental or sampling design, and a summary of the data contents. If you prefer and it is appropriate, we could add language from the abstract in the NSF Award found here: https://www.nsf.gov/awardsearch/showAward?AWD_ID=#######&HistoricalAwards=false
-
-Please let us know how to proceed.
-
-
 ### Best practices
 
 We noticed that the data files submitted are in _____ format. We recommend conversion of these files into a plain text/csv (OR ANOTHER APPROPRIATE OPEN-SOURCE) format in order to facilitate an accurate transfer of information to future researchers and ensure preservation of the data in perpetuity. We will perform these conversions for you. Below are some linked articles about data science best practices that the NSF Arctic Data Center adheres to:  
 DataONE - https://www.dataone.org/best-practices
 "Some Simple Guidelines for Effective Data Management" -  http://onlinelibrary.wiley.com/doi/10.1890/0012-9623-90.2.205/full
 "Good Enough Practices in Scientific Computing" - http://arxiv.org/pdf/1609.00037v1.pdf  
-
-
-### Methods
-
-Your methods, while informative, appear to be missing some information. Enough detail should be included so that a reasonable scientist can replicate the study without consulting you nor any other resources. This should hold true today, or even decades or a century from now. Users need to understand how the data were collected, how to interpret the values, and potentially how to use the data in the case of specialized files. We would be happy to add more content for you. Please provide us with a more robust methods section directly in this email or point us to a document from which we can extract more methods.
-
-
-### Data files
-
-We noticed that the data files contain...
--blank cells. What do these represent?
--some column headers that are unclear. Please define "X".
--some abbreviations that are unclear. Please define "XYZ", including the unit of measure.
--columns whose units are unclear. What are the units of measurement for the columns labeled "ABC" and "XYZ"?
-
-We noticed that no data files were submitted. With the exception of sensitive social science data, NSF requires the submission of all data products prior to publication. Do you intend to submit data files?
 
 
 ### DOI and data set finalization comments
@@ -130,6 +215,15 @@ Please let us know if you need any further assistance.
 The NSF ARC program managers check compliance with their data policies when checking annual reports. Generally, NSF ARC requires that fully quality controlled data be uploaded within 6 months of collection for AON projects, or within 2 years of collection (or by end of the grant) for other ARC funded projects. Additionally, complete metadata must be submitted within two years of collection or before the end of the award, whichever comes first. Please find an overview of the NSF ARC policies [here](https://arcticdata.io/submit/#who-must-submit) and the full policy information [here](https://www.nsf.gov/pubs/2014/nsf14584/nsf14584.htm#grantcond).
 
 Investigators should upload their data to the [Arctic Data Center](https://arcticdata.io), or, where appropriate, to another community endorsed data archive that ensures the longevity, interpretation, public accessibility, and preservation of the data (e.g., GenBank, NCEI). Local and university web pages generally are not sufficient as an archive. Data preservation should be part of the institutional mission and data must remain accessible even if funding for the archive wanes (i.e., succession plans are in place). We would be happy to discuss the suitability of various archival locations with you further. In order to provide a central location for discovery of ARC-funded data, a metadata record must always be uploaded to the Arctic Data Center even when another community archive is used.
+
+
+### Adding metadata via R
+
+KNB does not support direct uploading of EML metadata files through the website (we have a webform that creates metadata), but you can upload your data and metadata through R!
+
+[Here](https://nceas.github.io/sasap-training/materials/reproducible-analysis-in-r/data-documentation-and-publishing.html#publishing-data-from-r) are some training materials we have that use both the `dataone` and `datapack` packages. It explains how to set your authentication token, build a package from metadata and data files, and publish the package to one of our test sites. I definitely recommend practicing on a test site prior to publishing to the production site your first time through. You can point to the KNB test node (dev.nceas.ucsb.edu) using this command: `d1c <- D1Client("STAGING2", "urn:node:mnTestKNB")`
+
+If you prefer, there are Java, Python, Matlab, and Bash/cURL clients as well.
 
 
 ###  Nesting
