--- a/04_editingEMLinR.Rmd
+++ b/04_editingEMLinR.Rmd
@@ -1,11 +1,11 @@
 
-#Editing EML in R
+# Editing EML in R
 
 New data team members should complete [the exercise in this section](#exercise5) as part of training.
 
 ## Introduction
 
-This chapter is a practical tutorial for using the EML package to read, edit, write, and validate EML documents. Much of this information can also be found in the vignettes for the [EML package](https://github.com/ropensci/EML/blob/master/vignettes/creating-EML.Rmd).
+This chapter is a practical tutorial for using the EML package to read, edit, write, and validate EML documents. Much of this information can also be found in the vignettes for the [EML package](https://github.com/ropensci/EML/blob/master/vignettes/creating-EML.Rmd). For some additional background, also check out [this paper](data/eml-principles.pdf) on EML and the principles for metadata creation.
 
 First, load in some packages.
 
