--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -3,12 +3,13 @@ title: "NCEAS Data Team Training"
 author: "Jeanette Clark, Jesse Goldstein, Dominic Mullen, Bryce Mecum, Matt Jones, Peter Slaughter, Irene Steves"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-output: bookdown::gitbook
+output: 
+  bookdown::gitbook:
+    css: ../styles.css
 documentclass: book
 github-repo: rstudio/datateam-training
 description: "This is a training guide and reference resource for NCEAS data team members working on the SASAP and Arctic Data Center Projects"
 ---
-
 # Welcome to NCEAS! {#welcome}
 
 ## First day to-dos
