--- a/training/02_introArcticdatautils.Rmd
+++ b/training/02_introArcticdatautils.Rmd
@@ -1,10 +1,8 @@
-# Using arcticdatautils
-
-New data team members should complete exercises [two](#exercise2) and [three](#exercise3) as part of training.
+# Editing Data Packages in R
 
 ## Uploading packages using R
 
-We will be using the `arcticdatautils` package and the dataone package to connect to the [NSF Arctic Data Center (ADC)](https://arcticdata.io) data repository and push and pull edits. To identify yourself as an admin you will need to pass a 'token' into R. Do this by signing in to the ADC with your [ORCiD](https://orcid.org/register), hovering over your name and clicking on "My profile", then navigating to "Setings" and "Authentication Token", copying the "Token for DataONE R", and pasting and running it in your R console.
+We will be using R to connect to the [NSF Arctic Data Center (ADC)](https://arcticdata.io) data repository to push and pull edits. To identify yourself as an admin you will need to pass a 'token' into R. Do this by signing in to the ADC with your [ORCiD](https://orcid.org/register), hovering over your name and clicking on "My profile", then navigating to "Setings" and "Authentication Token", copying the "Token for DataONE R", and pasting and running it in your R console.
 
 **This token is your identity on these sites, please treat it as you would a password** (ie. don't paste into scripts that will be shared). The easiest way to do this is to always run the token in the *console*. There's no need to keep it in your script since it's temporary anyway. Sometimes you'll see a placeholder in scripts to remind users to get their token, such as:
 
@@ -19,30 +17,27 @@ library(dataone)
 library(datapack)
 ```
 
+If any package could not be loaded, use the following commad (replacing package_name with the actual package name) to install the package.
+
+```{r, eval = F}
+install.package("package_name")
+```
+
 Now install a couple of packages:
 ```{r, eval = F}
-install.packages('remotes'); library(remotes)
-remotes::install_github("nceas/arcticdatautils"); library(arcticdatautils)
+devtools::install_github("nceas/arcticdatautils"); library(arcticdatautils)
+devtools::install_github("nceas/datamgmt"); library(datamgmt)
 ```
 
-
-### Set environment
-
-Once we have our libraries loaded, we need to tell R with which repo we want to work. If we are working on the production site, you can set the coordinating node (`cn`) and member node (`mn`) this way:
-
-```{r set evnironment, eval= FALSE}
-cn <- CNode('PROD')
-mn <- getMNode(cn,'urn:node:ARCTIC')
+```{r, child = '../workflows/Editing_Data_Packages/Setting_DataONE_Nodes.Rmd'}
 ```
 
-If we are working in the test environment, we set it this way:
+For now set the node to the test Arctic node.
 
-```{r, eval = FALSE}
-cn <- CNode('STAGING')
-mn <- getMNode(cn,'urn:node:mnTestARCTIC')
+``` {r, eval = F, class.source = 'excercise'}
+cn <- dataone::CNode('STAGING')
+mn <- dataone::getMNode(cn,'urn:node:mnTestARCTIC')
 ```
-
-A note on nodes - be very careful about what you publish on the production node (PROD, or arcticdata.io). This node should NEVER be used to publish test or training datasets. While going through training exercises, you should be using the test environment (STAGING, or test.articdata.io). The CN is [DataONE](https://search.dataone.org/#data).
 
 ### What is in a package?
 
@@ -54,40 +49,13 @@ Each object (metadata files, data files, resource maps) on the ADC or KNB (anoth
 
 Different versions of a package are linked together by what we call the "version chain" or "obsolescence chain". Making an update to a data package, such as replacing a data file, changing a metadata record, etc, will result in a new identifier for the new version of the updated object. When making changes to a package, always use the `update_object` or `publish_update` commands from `arcticdatautils` on the *latest versions* of all objects to ensure that the version chain is maintained.
 
-### Publishing a package to the site
-
-Objects are published to the site using a function called `publish_object`. To publish a metadata file you would use the following call:
-
-```{r, eval=FALSE}
-meta_path <- 'path/to/your/metadata/metadata.xml'
-pid <- publish_object(mn, meta_path, format_id = format_eml())
+```{r, child = '../workflows/Editing_Data_Packages/Publishing_an_Object.Rmd'}
 ```
 
-This call will save the id of the metadata object to the variable `pid`, which you will need later for the resource map. It also adds a formatID, which identifies what kind of object you just uploaded. Similarly, you can publish data objects like this:
-
-```{r, eval=FALSE}
-data_path <- 'path/to/your/data/data.csv'
-data_pid <- publish_object(mn, data_path, format_id = 'text/csv')
+```{r, child = '../workflows/Editing_Data_Packages/Create_a_Resource_Map.Rmd'}
 ```
 
-Note that you will need to be explicit about your `format_id` here based on the file type. A list of format IDs can be found [here on the DataONE website](https://cn.dataone.org/cn/v2/formats).
-
-Finally, you can create and publish the resource map using `create_resource_map`.
-
-```{r create resource map, eval=FALSE}
-rm <- create_resource_map(mn, pid, data_pids = data_pid)
-```
-
-One final step is to make sure that the rights and access on thes objects you uploaded are set correctly. The function `set_rights_and_access` will set both, and `set_access` will just set access. There are two functions for this because a rights holder should always have access, but not all people who need access are rights holders. The rights holder of the data package is typically the submitter (if the dataset is submitted through the web form (sometimes refered to as the "registry")), but if a data team member is publishing objects for a PI, the rights holder should be the main point of contact for the dataset (i.e. the person who requested that we upload the data for them). In this example, we set rights and access for all of the objects created above, using an example ORCiD.
-
-```{r set rights and access, eval = FALSE}
-set_rights_and_access(mn, 
-                      c(pid, data_pid, rm), 
-                      subject = 'http://orcid.org/PUT0-YOUR-ORCD-HERE',
-                      permissions = c('read', 'write', 'changePermission'))
-```
-
-### Exercise 2 {#exercise2}
+### Exercise 2 {#exercise2 .excercise}
 
 * Locate the data package you published by navigating to the "My Profile" section on [test.arcticdata.io](https://test.arcticdata.io).
 * Download the metadata and data files and transfer them to the Datateam server.
@@ -131,7 +99,7 @@ publish_update(mn,
 
 If a package is ready to be public, note that you can change the `public` argument in the `publish_update` call to `TRUE`. Similarly, if you want to publish with a DOI (Digital Object Identifier) instead of a UUID (Universally Unique Identifier), you can change the `use_doi` argument to `TRUE`.
 
-### Exercise 3 {#exercise3}
+### Exercise 3 {#exercise3 .excercise}
 
 * Locate the data package you published in the previous exercise by navigating to the URL test.arcticdata.io/#view/... with the EML PID you generated in that exercise. 
 * Download the EML to your computer, and open it in a plain text editor (TextEdit, Atom, or Notepad++).
